# task1classes-sudomamartin

./: .gitignore  README.md  main.py  pyproject.toml
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
tasks/: task1.py  task2.py
tests/: test_task1.py  test_task2.py
