[project]
name = "task1_classes"
version = "0.1.0"
description = "Task 1 - Classes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest", # Added pytest for testing
]


[tool.ruff]
line-length = 120

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
